objects/JBCXM__SPSharingAssociation__c.object
<CustomObject>
    <description>Object to store the association of Success Plan/Objective to SP Sharing Layout Types</description>
    <fields>
        <fullName>JBCXM__LayoutType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sharing Layout Type</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipName>SPSharingAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective</label>
        <referenceTo>JBCXM__CTA__c</referenceTo>
        <relationshipName>SPSharingAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SuccessPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Plan</label>
        <referenceTo>JBCXM__CTAGroup__c</referenceTo>
        <relationshipName>SPSharingAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SPSharingAssociation</label>
    <nameField>
        <label>SPSharingAssociation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPSharingAssociations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>